# cometspy

./: #index.rst#  .gitattributes  .gitignore  .readthedocs.yaml  LICENSE  MANIFEST  README.md  batch_new.ipynb  colony.ipynb  comets.py  ipynb_to_docs.sh  model_testing.ipynb  new_batch.py  pyproject.toml  requirements.txt  sample_workflow_for_recent_refactor.py  setup.py
.github/workflows/: main.yml  publish_docs.yml  python-package.yml
.ipynb_checkpoints/: batch-checkpoint.ipynb  batch_new-checkpoint.ipynb  colony-checkpoint.ipynb  evolution-checkpoint.ipynb  felipe_yeast_simulation-checkpoint.ipynb  serial_transfers-checkpoint.ipynb
backup/: comets (copy).py  comets_BACKUP.py
cometspy/: __init__.py  comets.py  layout.py  model.py  params.py  utils.py
cometspy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
cometspy/.ipynb_checkpoints/: model-checkpoint.py
docs/: .readthedocs.yaml  requirements.txt
docs/source/: #index.rst#  README.md  branching_colony.md  capabilities.md  chemostat.md  circular_colony.md  citrate.md  cometspy.layout.rst  cometspy.model.rst  cometspy.rst  cometspy.utils.rst  cometspy_BACKUP.rst  common_toc.rst  conf.py  evolution.md  getting_started.md  index.rst  install.rst  intro.rst  petri_dish.md  soil.md
src/: comets.py
test/: test_params.py  test_utils.py
test_batch/: batch_layout
test_colony/: colony_layout
test_models/: iJO1366.cmd  layout_blueprint
