[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cometspy"
version = "0.6.1"
description = "The Python interface to COMETS"
authors = [
  { name = "The COMETSPy Core Team", email = "dukovski@bu.edu" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
keywords = ["metabolism", "dynamic", "flux", "balance", "analysis", "spatial", "evolution"]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8"
]

dependencies = [
  "numpy",
  "cobra",
  "pandas>=1.0.0",
  "tqdm"
]

[project.urls]
Homepage = "https://github.com/segrelab/cometspy"

[tool.setuptools]
license-files = []
